# COMP2012_Lab

2/: CMakeCache.txt  CMakeLists.txt  Makefile  factory.cpp  factory.h  main.cpp  mask.cpp  mask.h  materials.cpp  materials.h
3/: 3  CMakeCache.txt  CMakeLists.txt  Coronavirus.cpp  Coronavirus.h  Doctor.cpp  Doctor.h  Makefile  Norovirus.cpp  Norovirus.h  Patient.cpp  Patient.h  Patient_with_coronavirus.cpp  Patient_with_coronavirus.h  Patient_with_norovirus.cpp  Patient_with_norovirus.h  Person.cpp  Person.h  Virus.cpp  Virus.h  cmake_install.cmake  main.cpp
4/: 4  CMakeCache.txt  CMakeLists.txt  Makefile  beverage_store.cpp  beverage_store.h  cmake_install.cmake  gold_card.cpp  gold_card.h  main.cpp  regular_card.cpp  regular_card.h  silver_card.h  sliver_card.cpp  vip_lounge.cpp  vip_lounge.h
5/: 5  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp  organization.cpp  organization.h  regionx.cpp  regionx.h  regiony.cpp  regiony.h  who.cpp  who.h
6/: 6  CMakeCache.txt  CMakeLists.txt  Customer.cpp  Customer.h  Invoice.cpp  Invoice.h  Makefile  Person.cpp  Person.h  Product.cpp  Product.h  Salesman.cpp  Salesman.h  cmake_install.cmake  main.cpp
